parser/src/snapshots/emerald_lang_parser__fstring__tests__parse_fstring_equals.snap
---
source: src/fstring.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 0,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 0,
                column: 0,
            },
        ),
        custom: (),
        node: FormattedValue {
            value: Located {
                location: Location {
                    row: 1,
                    column: 1,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 9,
                    },
                ),
                custom: (),
                node: Compare {
                    left: Located {
                        location: Location {
                            row: 1,
                            column: 1,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 3,
                            },
                        ),
                        custom: (),
                        node: Constant {
                            value: Int(
                                42,
                            ),
                            kind: None,
                        },
                    },
                    ops: [
                        Eq,
                    ],
                    comparators: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 7,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 9,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    42,
                                ),
                                kind: None,
                            },
                        },
                    ],
                },
            },
            conversion: 0,
            format_spec: None,
        },
    },
]
