parser/src/snapshots/emerald_lang_parser__fstring__tests__parse_fstring_nested_spec.snap
---
source: src/fstring.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 0,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 0,
                column: 0,
            },
        ),
        custom: (),
        node: FormattedValue {
            value: Located {
                location: Location {
                    row: 1,
                    column: 1,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 4,
                    },
                ),
                custom: (),
                node: Name {
                    id: "foo",
                    ctx: Load,
                },
            },
            conversion: 0,
            format_spec: Some(
                Located {
                    location: Location {
                        row: 0,
                        column: 0,
                    },
                    end_location: Some(
                        Location {
                            row: 0,
                            column: 0,
                        },
                    ),
                    custom: (),
                    node: JoinedStr {
                        values: [
                            Located {
                                location: Location {
                                    row: 0,
                                    column: 0,
                                },
                                end_location: Some(
                                    Location {
                                        row: 0,
                                        column: 0,
                                    },
                                ),
                                custom: (),
                                node: FormattedValue {
                                    value: Located {
                                        location: Location {
                                            row: 1,
                                            column: 1,
                                        },
                                        end_location: Some(
                                            Location {
                                                row: 1,
                                                column: 5,
                                            },
                                        ),
                                        custom: (),
                                        node: Name {
                                            id: "spec",
                                            ctx: Load,
                                        },
                                    },
                                    conversion: 0,
                                    format_spec: None,
                                },
                            },
                        ],
                    },
                },
            ),
        },
    },
]
