parser/src/snapshots/emerald_lang_parser__fstring__tests__parse_fstring_not_equals.snap
---
source: src/fstring.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 0,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 0,
                column: 0,
            },
        ),
        custom: (),
        node: FormattedValue {
            value: Located {
                location: Location {
                    row: 1,
                    column: 1,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 7,
                    },
                ),
                custom: (),
                node: Compare {
                    left: Located {
                        location: Location {
                            row: 1,
                            column: 1,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 2,
                            },
                        ),
                        custom: (),
                        node: Constant {
                            value: Int(
                                1,
                            ),
                            kind: None,
                        },
                    },
                    ops: [
                        NotEq,
                    ],
                    comparators: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 6,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 7,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                    ],
                },
            },
            conversion: 0,
            format_spec: None,
        },
    },
]
